corrected projrect-cards tags to correctly align and remove dif background

--- a/style.css
+++ b/style.css
@@ -119,12 +119,12 @@ li {
 
 #projects-container {
   grid-column: 1/3;
-  background-color: purple;
 }
 
 .project-cards {
   background-color: white;
   padding: 20px;
+  gap: 15px;
 }
 
 .project-actions {
